# udemy-django-python-advanced

./: .dockerignore  .gitignore  README.md  pyproject.toml
.github/: run.sh
.github/workflows/: ci.yml
app/app/: settings.py  urls.py
app/app/settings/: base.py  local.py  prod.py
app/core/: admin.py  models.py
app/core/management/commands/: wait_for_db.py
app/core/migrations/: 0001_initial.py  0002_recipe.py  0003_tag_recipe_tags.py  0004_ingredient_recipe_ingredients.py  0005_recipe_image.py
app/core/tests/: factories.py  test_admin.py  test_models.py
app/recipe/: serializers.py  urls.py  views.py
app/recipe/tests/: test_ingredients_api.py  test_recipe_api.py  test_tags_api.py
app/user/: serializers.py  urls.py  views.py
app/user/tests/: test_user_api.py
docker/: Dockerfile  docker-compose.yml  entrypoint.sh  nginx.conf
